<resources>
    <string name="app_name">MyCooking</string>
    <string name="welcome_app">Cook delicious dishes with you every day</string>
    <string name="tab_home">Home</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_category">Category</string>
    <string name="tab_setting">Setting</string>
    <string name="list_favorite">List of favorite dishes</string>
    <string name="user_setting">Privacy</string>
    <string name="app_setting">Application</string>
    <string name="todo">TODO</string>
    <string name="feedback_setting">Feedback</string>
    <string name="drak_mode">Dark background mode</string>
    <string name="send_feedback">Send us feedback</string>
    <string name="call_feddback">Call for feedback</string>
    <string name="exit">Exit</string>
    <string name="meal_category">Meal Category</string>
    <string name="err_mess">Lỗi kết nối :(</string>
    <string name="youtube">Youtube</string>
    <string name="website">WebSite</string>
    <string name="sum">Sum: </string>
    <string name="category">Category:</string>
    <string name="name_category">Name:</string>
    <string name="area">Area:</string>
    <string name="ingredient">Ingredient:</string>
    <string name="cooking">Cooking Instructions</string>
    <string name="no_link">The link has not been updated yet</string>
    <string name="today_dish">Recommended dish for today</string>
    <string name="my_like">You may also like</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
    <string name="query_hint">Enter the dish</string>
    <string name="suggest">Food suggestions</string>


</resources>