<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment">

    <TextView
        style="@style/CustomTextviewTitle"
        android:text="@string/tab_setting"
        android:layout_marginBottom="20dp"/>

    <TextView
        style="@style/CustomTextviewNone"
        android:text="@string/user_setting"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/CustomTextviewNone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/list_favorite"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/brown"
        android:layout_marginVertical="15dp"
        android:elevation="2dp"
        android:backgroundTint="@color/brown"/>


</LinearLayout>