<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:context=".screens.SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageButton
            android:id="@+id/img_back_search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rouder_button"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextViewTitleApp"
            android:layout_width="0dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/search" />
    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginVertical="16dp"
        android:background="@drawable/searchview_bg"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/query_hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_view">

        <LinearLayout
            android:id="@+id/ll_food_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ListView
                android:id="@+id/lv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextViewTitle"
                android:text="@string/suggest"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/searchview_bg"
                android:id="@+id/tv_suggest"
                style="@style/TextViewNone"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recy_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_bar_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_err_search"
            style="@style/TextViewNone"
            android:layout_gravity="center"
            android:text="@string/err_mess"
            android:visibility="gone" />
    </FrameLayout>

</RelativeLayout>
